# IERX

./: .gitignore  CMakeLists.txt  README.md
cmake/: IERXMacros.cmake
desktop/: tech.woooo.ierx.desktop
host/: CMakeLists.txt
host/application/: CMakeLists.txt  application.cxx  application.h
host/components/: components.qrc  editor.h
host/components/ui/: PushButton.qml  WrappedMenu.qml
host/dataflow/: CMakeLists.txt
host/extendable/: CMakeLists.txt
host/forensics/: CMakeLists.txt
host/launcher/: CMakeLists.txt  launcher.cxx  launcher.h
host/launcher/ui/: Launcher.qml
host/logger/: CMakeLists.txt
host/notebook/: CMakeLists.txt
host/platform/: CMakeLists.txt  platform.cxx  platform.h  platform.qrc
host/platform/ui/: BottomStack.qml  HeadBar.qml  MainStack.qml  Platform.qml  SideBar.qml  SideStack.qml  StatusBar.qml
host/resources/: build_icons.py  gen_rc.py  icons.qrc
host/resources/i18n/: en_US.qm  zh_CN.qm  zh_CN.ts
host/utilities/: CMakeLists.txt  systeminfo.cxx
host/workspace/: CMakeLists.txt  project.cxx  tasks.cxx  workspace.h
plugins/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cxx  app.h  entry.cxx
src/application/: CMakeLists.txt  application.cxx  application.h  entry.cxx
src/components/: CMakeLists.txt  components.qrc  editor.cxx
src/components/ui/: Hexagon.qml  Label.qml  Loading.qml  ProgressButton.qml  PushArea.qml  PushButton.qml  Slider.qml  Style.qml
src/explorer/: CMakeLists.txt
src/interfaces/: CMakeLists.txt
src/knowledgebase/: CMakeLists.txt
src/launcher/: CMakeLists.txt  launcher.cxx  launcher.h  launcher.qrc
src/launcher/ui/: Hexagon.qml  Launcher.qml
src/platform/: CMakeLists.txt  platform.cxx  platform.h  platform.qrc
src/platform/ui/: BottomBar.qml  BottomStack.qml  EmptyPage.qml  HeadBar.qml  MainStack.qml  Platform.qml  SideBar.qml  SideStack.qml  StatusBar.qml
src/project/: CMakeLists.txt  project.cxx
src/resources/: CMakeLists.txt  build_icons.py  change_color.fish  gen_rc.py  icons.qrc  rename_svg.py  resources.qrc
src/resources/i18n/: en.ts  en_US.qm  en_US.ts  zh.qm  zh.ts  zh_CN.qm  zh_CN.ts
src/reversing/: CMakeLists.txt
src/utilities/: CMakeLists.txt  systeminfo.cxx  systeminfo.h
src/workspace/: CMakeLists.txt  project.h  tasks.h  workspace.cxx
tests/: CMakeLists.txt
